--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,53 +9,79 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= analytics_init if Rails.env.production? %>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3727897-34"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-3727897-34');
+  </script>
+
+
 </head>
 <body>
 
-  <% flash.each do |name, msg| %>
-  <% if msg.is_a?(String) %>
-  <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
-    <a class="close" data-dismiss="alert">&#215;</a>
-    <%= content_tag :div, msg, :id => "flash_#{name}" %>
-  </div>
-  <% end %>
-  <% end %>
+<% flash.each do |name, msg| %>
+    <% if msg.is_a?(String) %>
+        <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+          <a class="close" data-dismiss="alert">&#215;</a>
+          <%= content_tag :div, msg, :id => "flash_#{name}" %>
+        </div>
+    <% end %>
+<% end %>
 
-  <div class="navbar">
-    <div class="navbar-inner">
-      <a href="<%= root_path %> " class="brand">
-        <%= t :menu_brand_name %> <sub> alpha </sub>
+<div class="navbar">
+  <div class="navbar-inner">
+<div class="container">
+      <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar collapsed">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </a>
-      <ul class="nav">
-        <li> <%= link_to t(:menu_bar_author), authors_path %> </li>
-        <li> <%= link_to t(:menu_bar_poem), poems_path %> </li>
-        <li> <%= link_to "ಸಂಶೋಧನೆ", key_words_path %>  </li>
-        <li> <%= link_to t(:menu_bar_glossary), "#" %> </li>
-        <li> <%= link_to t(:menu_bar_contact_us), "#" %> </li>
-        <li> <%= link_to t(:menu_bar_about_us), "#" %> </li>
-      </ul>
 
-      <ul class="nav" style="float: right;">
-        <li>
-          <%= link_to("https://www.facebook.com/daasasanchaya", target: "_blank", class: "social-nav-right ") do %>
-          <i class="fa fa-facebook fa-2x"></i>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to("http://twitter.com/daasasanchaya" , target: "_blank",class: "social-nav-right ") do %>
-          <i class="fa fa-twitter fa-2x"></i>
-          <% end %>
-        </li>
-      </ul>
+<a href="<%= root_path %> " class="brand">
+      <%= t :menu_brand_name %> <sub> alpha </sub>
+    </a>
 
-    </div>
-  </div>
+<!--New -->
+<div class="nav-collapse navbar-responsive-collapse collapse" style="height: 0px;">
 
-  <div class="container">
-    <%= render 'layouts/search' %>
-    <%= yield %>
-  </div>
+<!--New -->
+    <ul class="nav">
+      <li> <%= link_to t(:menu_bar_author), "#" %> </li>
+      <li> <%= link_to t(:menu_bar_poem), poems_path %> </li>
+      <li> <%= link_to "ಸಂಶೋಧನೆ", key_words_path %>  </li>
+      <li> <%= link_to t(:menu_bar_glossary), "#" %> </li>
+      <li> <%= link_to t(:menu_bar_contact_us), "#" %> </li>
+      <li> <%= link_to t(:menu_bar_about_us), "#" %> </li>
+    </ul>
 
-  <%= render 'layouts/footer' %>
+    <ul class="nav" style="float: right;">
+      <li>
+        <%= link_to("https://www.facebook.com/kannadasanchaya", target: "_blank", class: "social-nav-right ") do %>
+            <i class="fa fa-facebook fa-2x"></i>
+        <% end %>
+      </li>
+      <li>
+        <%= link_to("https://twitter.com/_sanchaya" , target: "_blank",class: "social-nav-right ") do %>
+            <i class="fa fa-twitter fa-2x"></i>
+        <% end %>
+      </li>
+    </ul>
+    </div><!-- /.nav-collapse -->
+  
+</div>
+</div>
+</div>
+
+<div class="container">
+  <%= render 'layouts/search' %>
+  <%= yield %>
+</div>
+
+<%= render 'layouts/footer' %>
 </body>
 </html>
