--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="navbar-inner">
     <div class="copy-right">
-      © 2014  <a href="https://sanchaya.org" target="_blank"> ಕನ್ನಡ ಸಂಚಯ  </a>| ಸಾಹಿತ್ಯ ಸಂಶೋಧನೆ ಹಾಗೂ ಅಧ್ಯಯನ ವೇದಿಕೆ
+      © 2014 - 2020  <a href="https://sanchaya.org" target="_blank"> ಕನ್ನಡ ಸಂಚಯ  </a>| ಸಾಹಿತ್ಯ ಸಂಶೋಧನೆ ಹಾಗೂ ಅಧ್ಯಯನ ವೇದಿಕೆ
     </div>
   </div>
 </div>
